# coopAppBack

./: README.md  manage.py  pyproject.toml
catalog/: admin.py
catalog/migrations/: 0001_initial.py  0002_initial.py
catalog/models/: __init__.py  client.py  product.py
common/: admin.py  models.py
common/domain/: __init__.py  types.py
common/migrations/: 0001_initial.py
common/services/: distribution.py
coopapp/: __init__.py  admin.py  apps.py  asgi.py  settings.py  urls.py  wsgi.py
coopapp/management/commands/: createsuperuser.py  mycreatesuperuser.py
operations/: admin.py
operations/migrations/: 0001_initial.py  0002_distribution_notes_alter_distribution_created_by_and_more.py
operations/models/: __init__.py  distribution.py  offer.py  order.py
transactions/: admin.py
transactions/migrations/: 0001_initial.py
transactions/models/: __init__.py  buy.py  sell.py
users/: admin.py  forms.py  models.py
users/migrations/: 0001_initial.py  0002_user_region.py
