[project]
name = "coopapp-backend"
version = "0.1.0"
description = "API Backend for CoopApp - COOPEFAS logistics system"
authors = [
    {name = "Tomás Fava",email = "tomsfava@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
