[project]
name = "coopapp-backend"
version = "0.1.0"
description = "API Backend for CoopApp - COOPEFAS logistics system"
authors = [
    {name = "Tomás Fava",email = "tomsfava@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "django (>=5.2.5,<6.0.0)",
    "djangorestframework (>=3.16.1,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ruff = "^0.12.8"
pytest = "^8.4.1"
pytest-django = "^4.11.1"

[tool.ruff]
line-length = 88
target-version = "py310"

[tool.ruff.lint]
select = ["E", "W", "F", "I", "N", "B", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "single"

